--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "formik": "^2.4.6",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -44,7 +45,8 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
-    "twrnc": "^4.6.1"
+    "twrnc": "^4.6.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
