permission request page added

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "FinanceDigestBlott",
+    "name": "Blott",
     "slug": "FinanceDigestBlott",
     "version": "1.0.0",
     "orientation": "portrait",
