--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
+    "expo-device": "^7.0.2",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
-    "expo-notifications": "^0.29.13",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
