--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -40,6 +41,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-tailwindcss": "^1.1.11",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-navigation": "^4.4.4",
     "react-navigation-bottom-tabs": "^1.0.2",
