--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
@@ -55,6 +56,7 @@
     "@babel/core": "^7.25.2",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.1.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
